cluster/apps-archive/default/guacamole/app/guacamole.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  namespace: guacamole
  labels:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/component: guacamole

spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: guacamole
      app.kubernetes.io/component: guacamole
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guacamole
        app.kubernetes.io/component: guacamole
    spec:
      containers:
        - name: guacamole
          image: guacamole/guacamole:1.5.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
      nodeSelector:
        kubernetes.io/arch: amd64
