cluster/apps-archive/default/guacamole/app/guacd.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: guacd
  namespace: guacamole
spec:
  selector:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/component: guacd
  ports:
    - port: 4822
      targetPort: 4822
      protocol: TCP
