cluster/apps-archive/default/guacamole/app/postgres.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: guacamole
spec:
  selector:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/component: postgres
  ports:
    - name: pgsql
      port: 5432
      targetPort: pgsql
      protocol: TCP
