cluster/apps-archive/default/guacamole/app/guacamole.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole
  namespace: guacamole
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    cert-manager.io/cluster-issuer: ${CLUSTER_ISSUER}

spec:
  rules:
    - host: guacamole.${DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: guacamole
                port:
                  number: 80
  tls:
    - hosts:
        - guacamole.${DOMAIN}
      secretName: guacamole-tls
